--- a/michaellukiman.com/timeline/tl.html
+++ b/michaellukiman.com/timeline/tl.html
@@ -4,7 +4,6 @@
 <head>
 	<meta name="description" content="welcome to the world" />
 	<title>M.J. Lukiman</title>
-	<link rel="stylesheet" href="../main.css" type="text/css">
 	<meta charset="utf-8">
 </head>
 
@@ -27,133 +26,195 @@
   <li class='work'>
     <input class='radio' id='work5' name='works' type='radio' checked>
     <div class="relative">
-      <label class="bottom_label" for='work5'>outta the womb</label>
       <span class='date'>June 7 199x</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
-      <p>
-        Awoke in a strange place. Never really came to terms with it.
-      </p>
+    <div class='content1'>...
     </div>
   </li>
   <li class='work'>
     <input class='radio' id='work4' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work4'>presents</label>
-      <span class='date'>Elementary School</span>
+      <span class='date'>+7 years</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
-      <p>
-       'Gifted' program: Spent time crawling under bus seats every morning.
-      </p>
+    <div class='content1'>Welby Way Magnet
     </div>
   </li>
   <li class='work'>
     <input class='radio' id='work3' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work3'>dynamite boy</label>
-      <span class='date'>Middle School</span>
+      <span class='date'>+13 years</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
-      <p>
-       Gateless middle school. Named after the bringer of death and million dollar prizes, Alfred B. Nobel.
-      </p>
+    <div class='content1'>Nobel Middle School
     </div>
   </li>
   <li class='work'>
     <input class='radio' id='work2' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work2'>bagpipes</label>
-      <span class='date'>High School</span>
+      <span class='date'>+16 years</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
-      <p>
-       Founder of Uber graduated from high school. Academic decathlon winners. Only partial relation to both. Lots of thinking during this time.
-      </p>
+    <div class='content1'>Granada Hills High School<br><br>
+      President @ Wonder Club (Philosophy and Popular Physics)
     </div>
   </li>
   <li class='work'>
     <input class='radio' id='work1' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work1'>bloop</label>
-      <span class='date'>08 May 2013</span>
+      <span class='date'>Bachelor's in Neuroscience</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
-      <p>
-       bloop
-      </p>
+    <div class='content1'>New York University (上海)<br><br><br>Research Fellow @ Erlich Lab<br>Cofounder @ HackShanghai (CN)<br>Vice President @ Student Body<br>Executive Assistant @ IBT Neuro Accelerator (IL)<br>Lead Engineer @ NYUSH Hyperloop (SpaceX) (US)
+
+    </div>
+  </li>
+    <li class='work'>
+    <input class='radio' id='work1' name='works' type='radio'>
+    <div class="relative">
+      <span class='date'>Graduate Degree in Computer Science (NOW)</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content1'>New York University (Courant Institute of Mathematical Sciences)
+      <br><br>
+      High Performance Computing Admin @ NYU
+      <br>
+      FOH @ Tatsu East Ramen
+      <br>
+      General Manager @ The Tang NYC
     </div>
   </li>
 </ul>
 
 <ul id='timeline2'>
-  <li class='work'>
-    <input class='radio' id='work5' name='works' type='radio' checked>
+   <li class='work'>
+    <input class='radio' id='work6b' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work5'>outta the womb</label>
-      <span class='date'>June 7 199x</span>
+      <label class="top_label" for='work6b'>ANCESTORS</label>
+      <span class='date'>BC</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
+    <div class='content2'>
       <p>
-        Awoke in a strange place. Never really came to terms with it.
+       Were the fittest to conquer.
       </p>
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work4' name='works' type='radio'>
+    <input class='radio' id='work5b' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work4'>presents</label>
-      <span class='date'>Elementary School</span>
+      <label class="top_label" for='work5b'>PARENTS</label>
+      <span class='date'>20th Century</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
+    <div class='content2'>
       <p>
-       'Gifted' program: Spent time crawling under bus seats every morning.
+        Moved to US.
       </p>
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work3' name='works' type='radio'>
+    <input class='radio' id='work4b' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work3'>dynamite boy</label>
-      <span class='date'>Middle School</span>
+      <label class="top_label" for='work4b'>FRUGAL START</label>
+      <span class='date'>Born </span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
+    <div class='content2'>
       <p>
-       Gateless middle school. Named after the bringer of death and million dollar prizes, Alfred B. Nobel.
+       Awoke in strange place. Never came to terms with it. In retro, humble.
       </p>
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work2' name='works' type='radio'>
+    <input class='radio' id='work3b' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work2'>bagpipes</label>
-      <span class='date'>High School</span>
+      <label class="top_label" for='work3b'>PLAY</label>
+      <span class='date'>New Century</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
+    <div class='content2'>
       <p>
-       Founder of Uber graduated from high school. Academic decathlon winners. Only partial relation to both. Lots of thinking during this time.
+       Drew comics. Ratchet and Clank inspired love for space travel.
       </p>
     </div>
   </li>
   <li class='work'>
-    <input class='radio' id='work1' name='works' type='radio'>
+    <input class='radio' id='work2b' name='works' type='radio'>
     <div class="relative">
-      <label class="bottom_label" for='work1'>bloop</label>
-      <span class='date'>08 May 2013</span>
+      <label class="top_label" for='work2b'>DIAL UP</label>
+      <span class='date'>Early Century</span>
       <span class='circle'></span>
     </div>
-    <div class='content'>
+    <div class='content2'>
       <p>
-       bloop
+       Late to DSL. Led to patience and an appreciation of this new advent.
+      </p>
+    </div>
+  </li>
+    <li class='work'>
+    <input class='radio' id='workmb' name='works' type='radio'>
+    <div class="relative">
+      <label class="top_label" for='workmb'>ITUNES</label>
+      <span class='date'>c. Limewire</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content2'>
+      <p>
+       Search for the perfect sound. Seconds at a time.
+      </p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='work1b' name='works' type='radio'>
+    <div class="relative">
+      <label class="top_label" for='work1b'>MMORPG</label>
+      <span class='date'>Own World</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content2'>
+      <p>
+       DarkBASIC from Fry's. Made a team. Made a game.
+      </p>
+    </div>
+  </li>
+    <li class='work'>
+    <input class='radio' id='workhb' name='works' type='radio'>
+    <div class="relative">
+      <label class="top_label" for='workhb'>HEAD FIRST</label>
+      <span class='date'>Own World</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content2'>
+      <p>
+       Game dev. translated to other programming and design.
+      </p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='workab' name='works' type='radio'>
+    <div class="relative">
+      <label class="top_label" for='workab'>AFTER SCHOOL</label>
+      <span class='date'>c. AP Classes</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content2'>
+      <p>
+       Not enough money. Wandered evenings in the library and Wiki.
+      </p>
+    </div>
+  </li>
+    <li class='work'>
+    <input class='radio' id='work0b' name='works' type='radio'>
+    <div class="relative">
+      <label class="top_label" for='work0b'>RELATIONSHIPS</label>
+      <span class='date'>Last yr. of highschool</span>
+      <span class='circle'></span>
+    </div>
+    <div class='content2'>
+      <p>
+       Hadn't happened until now - an intense crash course. Strong.
       </p>
     </div>
   </li>
